--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     background-color: #A9E4D7;
     border: 1px solid black;
     position: relative;
-    height: 220px;
+    height: 300px;
 }
 .boxes h2{
     font-family: 'Roboto', sans-serif;
@@ -21,6 +21,15 @@
     margin: 0;
     padding: 5px 50px;
 }
+.boxes p{
+    font-size:18px;
+    color:#000;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
+    margin: 50px auto 0;
+    padding-left: 20px;
+}
 #chicken-title{
     background-color:#B24080;
 }
@@ -29,14 +38,6 @@
 }
 #sushi-title{
     background-color: #FFF9B2;
-}
-.boxes p{
-    font-size:18px;
-    color:#000;
-    font-weight: 600;
-    font-family: 'Roboto', sans-serif;
-    text-align: left;
-    margin: 50px auto 0;
 }
 .row{
     width:100%;
